Fix slide gaps

--- a/styles/css/vtex.slider-layout.css
+++ b/styles/css/vtex.slider-layout.css
@@ -29,3 +29,7 @@
   padding-right: .5rem;
   min-height: 550px;
 }
+
+.sliderTrack--vtex-recommendation-shelf-slider{
+  gap: 3rem;
+}
